--- a/neural-network.cabal
+++ b/neural-network.cabal
@@ -21,7 +21,7 @@ library
   exposed-modules:     MyLib
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13, matrix, vector, bimap, semialign, these
+  build-depends:       base >=4.12 && <4.13, matrix, vector, bimap, semialign, these, split, MonadRandom
   -- hs-source-dirs:
   default-language:    Haskell2010
 
@@ -30,4 +30,4 @@ test-suite neural-network-test
   type:                exitcode-stdio-1.0
   -- hs-source-dirs:
   main-is:             MyLibTest.hs
-  build-depends:       base >=4.12 && <4.13, matrix, vector, bimap, semialign, these
+  build-depends:       base >=4.12 && <4.13, matrix, vector, bimap, semialign, these, split, MonadRandom
